Fixed issue with single click on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -1233,7 +1233,7 @@ ul li{
 @media (max-width: 540px) {
   #bottom-icons-container {
       margin-top: -15px;
-      width: 400px;
+      width: 300px;
       height: 150px;
 
   }
